hubSide/force-app/main/default/objects/ClaimElement__c/ClaimElement__c.object-meta.xml
<CustomObject>
    <description>Objet stockant le détail des différents éléments concernés par un dossiers de réclamation ainsi que les montants et justifications associées.</description>
    <label>Elément Réclamation</label>
    <nameField>
        <displayFormat>REC-EL-{00000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eléments Réclamation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>