hubSide/force-app/main/default/objects/ClaimElement__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Montant à renseigner par gestionnaire</description>
    <label>Montant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>