hubSide/force-app/main/default/objects/ClaimElement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Dossier de réclamation associé à cet élément</description>
    <label>Dossier réclamation</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Eléments Réclamation</relationshipLabel>
    <relationshipName>ElementsReclamation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>