hubSide/force-app/main/default/objects/ClaimElement__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Précisions complémentaires sur les montants remboursés</description>
    <label>Commentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>