hubSide/force-app/main/default/objects/ClaimElement__c/fields/ConcernedElement__c.field-meta.xml
<CustomField>
    <fullName>ConcernedElement__c</fullName>
    <description>Elément concerné par le dossier de réclamation</description>
    <label>Elément concerné</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formule</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>PDS hors Buy Back</fullName>
            </value>
            <value>
                <fullName>Buy Back</fullName>
            </value>
            <value>
                <fullName>Sinistre</fullName>
            </value>
            <value>
                <fullName>ODR Formule</fullName>
            </value>
            <value>
                <fullName>ODR PDS</fullName>
            </value>
            <value>
                <fullName>Offre commerciale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>