hubSide/force-app/main/default/objects/ClaimElement__c/fields/TechConcernedElement__c.field-meta.xml
<CustomField>
    <fullName>TechConcernedElement__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Champ technique alimenté par un auto triggered Flow permettant d&apos;empêcher la création de plusieurs enregistrements avec la même valeur de picklist Elément Concerné en dessous d&apos;un même dossier de réclamation</description>
    <label>Elément concerné</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>